syntax = "proto3";

package category;

option go_package = "./proto;category";

service Category {
	rpc CreateCategory(CategoryInfo) returns(CreateCategoryResponse) {}
	rpc FindCategoryById(FindCategoryByIdRequest) returns(CategoryInfo) {}
}

message CategoryInfo {
	int64 id = 1;
	string category_name = 2;
	string category_code = 3;
}

message  CreateCategoryResponse {
	int64 id = 1;
}

message  FindCategoryByIdRequest {
	int64 id = 1;
}
